Corrected date variable errors in ConfirmTransfer.cshtml.

--- a/Sjuklöner/Views/Claims/ConfirmTransfer.cshtml
+++ b/Sjuklöner/Views/Claims/ConfirmTransfer.cshtml
@@ -23,16 +23,16 @@
     </div>
 </div>
 <div class="row">
-    @Html.LabelFor(m => m.QualifyingDate, new { @class = "col-md-2 display-right-align control-label" })
+    @Html.LabelFor(m => m.FirstClaimDate, new { @class = "col-md-2 display-right-align control-label" })
     <div class="col-small-left-padding col-md-10">
-        @Html.DisplayFor(m => m.QualifyingDate)
+        @Html.DisplayFor(m => m.FirstClaimDate)
     </div>
 </div>
 
 <div class="row">
-    @Html.LabelFor(m => m.LastDayOfSicknessDate, new { @class = "col-md-2 display-right-align control-label" })
+    @Html.LabelFor(m => m.LastClaimDate, new { @class = "col-md-2 display-right-align control-label" })
     <div class="col-small-left-padding col-md-10">
-        @Html.DisplayFor(m => m.LastDayOfSicknessDate)
+        @Html.DisplayFor(m => m.LastClaimDate)
     </div>
 </div>
 
