--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -370,12 +370,15 @@
             {
                 <div class="row">
                     <div class="form-horizontal">
-                        <div class="form-group margin-bottom-small col line-height-06">
+                        <div class="form-group margin-bottom-small col line-height-10">
                             <div class="col-md-4 control-label control-label-large2 padding-right1">
                                 Beslut:
                             </div>
                             <div class="col-md-8 align-bottom7 display-result decision-padding-left3">
-                                @Html.DisplayFor(model => Model.DecisionContent)
+                                @foreach(var contentLine in Model.DecisionContent.Split('\n'))
+                                {
+                                    <p>@contentLine</p>
+                                }
                             </div>
                         </div>
                     </div>
