--- a/Sjuklöner/Views/Account/NewAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/NewAdmOff.cshtml
@@ -57,14 +57,14 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger font-size-11" })
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
         </div>
     </div>
@@ -72,7 +72,7 @@
         <div class="col-md-offset-2 col-md-1">
             <input type="submit" class="btn btn-primary btn-primary-small" value="Spara" />
         </div>
-        <div class="small-padding-left3 col col-md-1">
+        <div class="small-padding-left8 col col-md-1">
             @Html.ActionLink("Avbryt", "IndexAdmOff", "Account", null, new { @class = "btn btn-secondary btn-secondary-small" })
         </div>      
     </div>
