--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -35,7 +35,7 @@
         </div>
     }
     <br />
-    <br />    
+    <br />
 
     <hr class="claim-divider" />
     <div class="row">
@@ -60,12 +60,12 @@
                         <th class="small-col-admin">
                             Assistansbolag
                         </th>
-                        <th class="small-col-admin">
+                        @*<th class="small-col-admin">
                             Assistentens personnummer
-                        </th>
-                        <th class="small-col-admin">
+                        </th>*@
+                        @*<th class="small-col-admin">
                             Kundens personnummer
-                        </th>
+                        </th>*@
                         <th class="ssmall-col-admin">
                             Första kalenderdag
                         </th>
@@ -78,8 +78,12 @@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="small-col-admin"></th>
-                        <th class="small-col-admin"></th>
+                        <th class="small-col-admin">
+                            Rek. godkänt belopp (Kr)
+                        </th>
+                        <th class="small-col-admin">
+                            Rek. avslaget belopp (Kr)
+                        </th>
                         <th class="small-col-admin"></th>
                     </tr>
 
@@ -101,12 +105,12 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CompanyName)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
+                            </td>*@
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
+                            </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
@@ -119,16 +123,15 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
-                            <td></td>
-                            <td></td>
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
+                            </td>
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
+                            </td>
                             <td>
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
                             </td>
-                            @*<td>
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
                         </tr>
                     }
 
@@ -167,12 +170,12 @@
                         <th class="small-col-admin">
                             Assistansbolag
                         </th>
-                        <th class="small-col-admin">
+                        @*<th class="small-col-admin">
                             Assistentens personnummer
-                        </th>
-                        <th class="small-col-admin">
+                        </th>*@
+                        @*<th class="small-col-admin">
                             Kundens personnummer
-                        </th>
+                        </th>*@
                         <th class="ssmall-col-admin">
                             Första kalenderdag
                         </th>
@@ -185,8 +188,12 @@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="small-col-admin"></th>
-                        <th class="small-col-admin"></th>
+                        <th class="small-col-admin">
+                            Rek. godkänt belopp (Kr)
+                        </th>
+                        <th class="small-col-admin">
+                            Rek. avslaget belopp (Kr)
+                        </th>
                         <th class="small-col-admin"></th>
                     </tr>
 
@@ -208,12 +215,12 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CompanyName)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
+                            </td>*@
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
+                            </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
@@ -226,15 +233,13 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
+                            <td class="highlight-green-bold">
+                                @Html.DisplayFor(modelItem => item.ApprovedSum)
+                            </td>
+                            <td class="highlight-red-bold">
+                                @Html.DisplayFor(modelItem => item.RejectedSum)
+                            </td>
                             <td></td>
-                            <td></td>
-                            <td></td>                          
-                    
-                            @*<td>
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
                         </tr>
                     }
 
@@ -273,12 +278,12 @@
                         <th class="small-col-admin">
                             Assistansbolag
                         </th>
-                        <th class="small-col-admin">
+                        @*<th class="small-col-admin">
                             Assistentens personnummer
-                        </th>
-                        <th class="small-col-admin">
+                        </th>*@
+                        @*<th class="small-col-admin">
                             Kundens personnummer
-                        </th>
+                        </th>*@
                         <th class="ssmall-col-admin">
                             Första kalenderdag
                         </th>
@@ -291,12 +296,8 @@
                         <th class="small-col-admin">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="small-col-admin">
-                            Godkänt belopp (Kr)
-                        </th>
-                        <th class="small-col-admin">
-                            Avslaget belopp (Kr)
-                        </th>
+                        <th class="small-col-admin"></th>
+                        <th class="small-col-admin"></th>
                         <th class="small-col-admin"></th>
                     </tr>
 
@@ -318,12 +319,12 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CompanyName)
                             </td>
-                            <td>
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.RegAssistantSSN)
-                            </td>
-                            <td>
+                            </td>*@
+                            @*<td>
                                 @Html.DisplayFor(modelItem => item.CustomerSSN)
-                            </td>
+                            </td>*@
                             <td>
                                 @Html.DisplayFor(modelItem => item.FirstClaimDayShort)
                             </td>
@@ -336,20 +337,11 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
-                            <td class="highlight-green-bold">
-                                @Html.DisplayFor(modelItem => item.ApprovedSum)
-                            </td>
-                            <td class="highlight-red-bold">
-                                @Html.DisplayFor(modelItem => item.RejectedSum)
-                            </td>
+                            <td></td>
+                            <td></td>
                             <td>
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
                             </td>
-                            @*<td>
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Detaljer", "Details", new { id = item.Id })
-                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-                                </td>*@
                         </tr>
                     }
 
