--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -80,12 +80,12 @@
                         <th class="small-col-ombud">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="medium-col-ombud">
+                        @*<th class="medium-col-ombud">
                             Godkänt belopp (Kr)
                         </th>
                         <th class="medium-col-ombud">
                             Avslaget belopp (Kr)
-                        </th>
+                        </th>*@
                         <th></th>
                     </tr>
 
@@ -114,20 +114,13 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
-                            <td class="highlight-green-bold">
+                            @*<td class="highlight-green-bold">
                                 @Html.DisplayFor(modelItem => item.ApprovedSum)
                             </td>
                             <td class="highlight-red-bold">
                                 @Html.DisplayFor(modelItem => item.RejectedSum)
-                            </td>
+                            </td>*@
                             <td>
-                                @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success-small" }) |*@
-                                @*@Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })*@
-                                @*@if (item.RejectedSum > 1)
-                                    {
-                                        @Html.ActionLink("Överklaga", "Create", null, new { @class = "btn btn-warning btn-warning-small" })
-                                    }*@
-                                @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary-small" })*@
                             </td>
                         </tr>
                     }
@@ -228,10 +221,6 @@
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
                             </td>
                             <td>
-                                @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
-                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
                             </td>
                         </tr>
                     }
@@ -292,11 +281,7 @@
                         <tr>
                             <td>
                                 @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
-                                @*@Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
                             </td>
-                            @*<td>
-                                 @Html.DisplayFor(modelItem => item.AdmOffName)
-                                </td>*@
                             <td>
                                 @Html.ActionLink("Skapa Pdf", "ClaimDetailsAsPdf", new { refNumber = item.ReferenceNumber }, new { @class = "btn btn-secondary btn-secondary-small" })
                             </td>
@@ -318,14 +303,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>
-                                @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success btn-success-small" }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" }) |
-                                    @Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
-                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                            </td>
+                            <td></td>
                         </tr>
                     }
                 </table>
